2002-07-17  Daniel Berlin  <dberlin@dberlin.org>

	* tree-alias-ecr.c: New file. Equivalence Class Representation.

	* tree-alias-steen.c: New file. Steengaard Alias Analysis.

	* disjoint-set.c: New file. Disjoint set data structure.

	* tree-alias-type.c: New file. Alias types.

	* c-simplify.c (create_tmp_alias_var): New function, like
	create_tmp_var, but doesn't add it to the current binding.

	* tree-simple.h: Prototype for create_tmp_alias_var.

	* tree-optimize.c (build_tree_ssa): Create alias variables, if
	requested.

	* flags.h: Add flag_tree_points_to.

	* toplev.c: Ditto.
	
	* gengtype.c (open_base_files): Add disjoint-set.h,
	tree-alias-ecr.h, tree-alias-type.h, tree-flow.h.

	* Makefile.in (C_AND_OBJC_OBJS): Add disjoint-set.o,
	tree-alias-ecr.o, tree-alias-type.o, tree-alias-steen.o.
	(tree-alias-steen.o): Add dependencies.
	(tree-alias-ecr.o): Ditto.
	(tree-alias-type.o): Ditto.
	(disjoint-set.o): Ditto.

2002-07-10  Daniel Berlin  <dberlin@dberlin.org>
	    Diego Novillo  <dnovillo@redhat.com>

	* Makefile.in (C_AND_OBJC_OBJS): Add tree-ssa-ccp.o
	* flags.h (flag_tree_ssa_ccp): Declare.
	* fold-const.c (eval_subst): Make extern.
	* toplev.c (flag_tree_ssa_ccp): Define.
	(f_options): Document -ftree-ssa-ccp.
	* tree-dump.c (dump_files): Add -fdump-tree-ccp.
	* tree-flow.h (tree_perform_ssapre): Move declaration ...
	* tree-optimize.h: ... here.
	(tree_ssa_ccp): Declare.
	* tree-optimize.c (optimize_function_tree): Call tree_ssa_ccp.
	* tree-ssa-ccp.c: New file.
	* tree.c (next_decl_uid): Remove static declaration.
	* tree.h (next_decl_uid): Declare.
	(tree_dump_index): Add TDI_ccp.
	* cp/Make-lang.in (CXX_C_OBJS): Add tree-ssa-ccp.o.
	* doc/invoke.texi: Document -ftree-ssa-pre and -ftree-ssa-ccp.

2002-07-09  Daniel Berlin  <dberlin@dberlin.org>

	s/varrays of refs/ref_list of refs/g

	* tree-flow.h: Add ref_list structure.  
	Add prototypes for ref_list functions.
 	(FOR_EACH_REF, FOR_EACH_REF_REV): New macros to iterate through 
	ref lists.